# IA-coloreo

./: README.md
C1/: CMakeLists.txt  Shader.h  fragment.glsl  main.cpp  vertex.glsl
